# matter_extension_2.8

./: .projectlinkstore  .v2_8.patch.swp  README.md  light-switch-app.pintool  light-switch-app.slcp  light-switch-app.slpb  light-switch-app.slps  v2_8.patch.txt  vscode.conf
.bak/: source_and_include_paths.json
artifact/: light-switch-app.s37
autogen/: linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_rail_util_mp_transition_time_config.h
autogen/.slc_state/: .crc_config.crc
autogen/zap-generated/: CodeDrivenCallback.h  CodeDrivenInitShutdown.cpp  IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
autogen/zap-generated/app/: PluginApplicationCallbacks.h  callback-stub.cpp  cluster-init-callback.cpp
cmake_gcc/: CMakeLists.txt  CMakePresets.json  light-switch-app.cmake  toolchain.cmake
config/: btl_core_cfg.h  dmadrv_config.h  pin_config.h  sl_bluetooth_advertiser_config.h  sl_bluetooth_config.h  sl_board_control_config.h  sl_bt_rtos_config_s3.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_matter_config.h  sl_matter_icd_config.h  sl_memlcd_eusart_config.h  sl_openthread_features_config.h  sl_rail_util_pa_tables_config.h  sl_rail_util_pti_config.h  sl_simple_button_btn1_config.h  sl_simple_led_led0_config.h  sl_simple_led_led1_config.h  sl_token_manager_config.h  sl_uartdrv_eusart_vcom_config.h
config/btconf/: slc_args.json
config/common/: slc_args.json
simplicity_sdk_2025.12.0/bluetooth_le_host/inc/: sl_bt_rtos_adaptation.h
simplicity_sdk_2025.12.0/bluetooth_le_host/src/: sl_bt_rtos_adaptation.c
simplicity_sdk_2025.12.0/openthread/include/: sl_openthread_package_info.h  sl_ot_custom_cli.h
simplicity_sdk_2025.12.0/security_sxsymcrypt/: REUSE.toml
simplicity_sdk_2025.12.0/security_sxsymcrypt/LICENSES/: BSD-3-Clause.txt
simplicity_sdk_2025.12.0/security_sxsymcrypt/src/: aead.c  aeaddefs.h  ba431regs.h  blkcipher.c  blkcipherdefs.h  channel.c  cmac.c  cmaes.h  cmdma.c  cmdma.h  cmmask.c  crypmasterregs.h  hash.c  hashdefs.h  hmac.c  hw.h  interrupts.c  keyref.c  keyrefdefs.h  (+3 more)
src/: ShellCommands.cpp  ShellCommands_new.cpp  ShellCommands_periodic_toggle.cpp
(+188 files in other folders)
